bin/err.out
a.cpp: In function 'int main()':
a.cpp:6:23: error: expected ';' before 'return'
  cout << a + b << endl
                       ^
                       ;
  return 0;
  ~~~~~~                
